# aws-flask

./: .gitignore  .pdm-python  README.md  pyproject.toml  server.py
src/aws_flask/: server.py
src/aws_flask/static/: script.js  styles.css
src/aws_flask/templates/: index.html  info.html
tests/: test_server.py
