[project]
name = "aws-flask"
version = "0.1.0"
description = "aws app"
authors = [
    {name = "Elai Shalev", email = "eshalev@redhat.com"},
]
dependencies = ["flask>=3.1.0", "ruff>=0.9.6"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
flask-run = { shell = "flask run", env = { FLASK_APP = "src/aws_flask/server.py", FLASK_ENV = "development" } }

[dependency-groups]
dev = ["pytest>=8.3.4", "bandit>=1.8.2"]
